# exchange-match-engine

./: .gitignore  Cargo.toml  README.md
domain/: Cargo.toml  _build.rs  build.rs
domain/src/: exchange.rs  lib.rs  ord.rs  order.rs
engine/: Cargo.toml
engine/domain/: Cargo.toml
engine/domain/src/: book.rs  env.rs  lib.rs  order.rs  transaction.rs
engine/engine/: Cargo.toml
engine/engine/src/: exchange.rs  lib.rs  provider.rs  redis.rs
engine/server/: Cargo.toml
engine/server/src/: api.rs  handlers.rs  main.rs  routes.rs
engine/src/: lib.rs  main.rs  web.rs
engine/src/domain/: book.rs  env.rs  order.rs  spread.rs  transaction.rs
engine/src/server/: api.rs  mod.rs
engine/src/service/: exchange.rs  provider.rs
proto/: exchange.proto
server/: conf.json  index.html  package-lock.json  package.json  tsconfig.json
server/src/: index.ts  server.ts
server/src/__tests__/: order.spec.ts  sine.spec.ts
server/src/app/: App.svelte
server/src/app/components/: Error.svelte  Orders.svelte  Prices.svelte  StoreData.svelte  Transactions.svelte
server/src/app/service/: env.ts  fetch.ts  order.ts  transactions.ts  util.ts
server/src/app/stores/: orders.ts  prices.ts  transactions.ts
server/src/decoder/: env.ts  order.ts  transaction.ts
server/src/domain/: action.ts  error.ts  order.ts  transaction.ts
server/src/handler/: api.ts
server/src/service/: redis.ts
service/: Cargo.toml  build.rs
service/src/: exchange.rs  lib.rs
src/: env.rs  main.rs
src/domain/: book.rs  env.rs  mod.rs  order.rs  transaction.rs
src/service/: exchange.rs  mod.rs  provider.rs
