[[bin]]
name = "main"
path = "src/main.rs"

[package]
edition = "2021"
name = "exchange"
version = "0.1.0"

[dependencies]
bytes = "1.2"
exchange-domain = {path = "./domain"}
exchange-service = {path = "./service"}
prost = "0.11.2"
serde = "1.0.147"
serde_json = "1.0.87"
tokio = {version = "1.21", features = ["macros", "rt-multi-thread"]}
tonic = "0.8"

[workspace]
members = [
  "domain",
  "service",
]
