[[bin]]
name = "main"
path = "src/main.rs"

[package]
edition = "2021"
name = "exchange"
version = "0.1.0"

[dependencies]
structopt = "0.3"
tokio = {version = "1.21", features = ["macros", "rt-multi-thread"]}
tonic = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

bytes = "1.2"
chrono = {version = "0.4", features = ["serde"]}
serde = {version = "1", features = ["derive"]}

anyhow = "1"
redis = {version = "0.22.1", features = ["tokio-comp"]}
sorted-vec = "0.8"
