[package]
edition = "2021"
name = "domain"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
bytes = "1.2"
chrono = {version = "0.4", features = ["serde"]}
redis = {version = "0.22", features = ["tokio-comp"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
structopt = "0.3"
tracing = "0.1"
uuid = {version = "1.2", features = ["v4", "serde"]}
