[package]
edition = "2021"
name = "engine"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
bincode = "1.3"
bytes = "1.2"
chrono = {version = "0.4", features = ["serde"]}
domain = {path = "../domain"}
redis = {version = "0.22", features = ["tokio-comp", "r2d2"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
structopt = "0.3"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
tracing = "0.1"
uuid = {version = "1.2", features = ["v4", "serde"]}
